# Clone-katgpt-rs

./: .gitignore  .issues  AGENTS.md  Cargo.toml  README.md  domains.toml  release-plz.toml  rust-analyzer.toml
crates/katgpt-attn/: Cargo.toml
crates/katgpt-attn-match/: Cargo.toml  README.md
crates/katgpt-attn-match/src/: beta_fitter.rs  chunked.rs  compact.rs  compact_fixed_beta.rs  lib.rs  online.rs  rerank.rs  router.rs  score_matrix.rs  score_matrix_gpu.rs  score_matrix_rayon.rs  tests.rs  types.rs  value_fitter.rs
crates/katgpt-attn/src/: diagonal_gate.rs  ega_attn.rs  hga_forward.rs  lib.rs  static_cal.rs
crates/katgpt-backend/: Cargo.toml
crates/katgpt-backend/src/: ane.rs  gpu.rs  lib.rs
crates/katgpt-band/: Cargo.toml
crates/katgpt-band/src/: adaptive_cot_stopper.rs  band_conditioner.rs  bckvss.rs  collider_pruner.rs  lib.rs
crates/katgpt-claim/: Cargo.toml
crates/katgpt-claim/src/: lib.rs
crates/katgpt-core/: CHANGELOG.md  Cargo.toml  README.md
crates/katgpt-core/benches/: bench_001_zone_manifold_goat.rs  bench_039_architecture_root_goat.rs  bench_040_ptg_functor_edge.rs  bench_313_ac_prefix_goat.rs  bench_313_ac_prefix_modelless.rs  bench_319_g8c_formation_robustness.rs  bench_319_g8d_faction_diversity.rs  bench_319_g8e_aoi_latency.rs  bench_319_geometric_product_goat.rs  bench_320_indicator_probe_bank_goat.rs  bench_322_phase_rotation_goat.rs  bench_323_fourier_continuation_goat.rs  bench_324_bisimulation_goat.rs  bench_325_spectral_differentiation_goat.rs  bench_326_tucker_hosvd_goat.rs  bench_327_arg_protocol_goat.rs  bench_329_non_interference_branches_goat.rs  bench_335_paired_loss_goat.rs  bench_337_tropical_goat.rs  bench_337_tropical_perf.rs  bench_341_temp_loss_fingerprint_goat.rs  bench_342_latent_trajectory_geometry_goat.rs  bench_357_motor_gated_field_goat.rs  bench_359_dec_heat_kernel_trajectory_goat.rs  bench_367_qmc_bom_overhead.rs  bench_367_qmc_goat.rs  bench_370_manifold_bandit_goat.rs  bench_371_mean_field_regime_goat.rs  bench_374_remax_goat.rs  bench_375_factorized_action_goat.rs  bench_376_velocity_field_ensemble_goat.rs  bench_376_velocity_field_ensemble_poc.rs  bench_377_local_branch_routing_goat.rs  bench_379_ane_roofline_goat.rs  bench_390_mcts_state_action_cache_goat.rs  bench_405_spherical_steering_goat.rs  bench_408_pkm_episodic_fusion.rs  bench_408_pkm_goat.rs  bench_410_linking_fold_goat.rs  bench_411_gold_share_goat.rs  (+37 more)
crates/katgpt-core/examples/: ac_prefix_demo.rs  bisimulation_demo.rs  chunked_store_basic.rs  committed_blend_01_three_archetypes.rs  committed_blend_02_recommit_on_event.rs  conformal_airpassengers.rs  conformal_karc_overlay.rs  karc_double_scroll.rs  karc_double_scroll_higher_order.rs  mcts_state_action_cache_basic.rs  paired_loss_01_micro_gpt_ab.rs  paired_loss_02_class_size_bound.rs  personality_composition_01_basic.rs  personality_composition_02_taming.rs  qgf_01_guided_drafter.rs  qgf_02_adaptive_weight.rs  qgf_03_tier_routing.rs  simd_wasm32_goat.rs  sleep_time_01_basic.rs  sleep_time_02_curiosity_inversion.rs  subspace_phase_gate_goat.rs
crates/katgpt-core/src/: alloc.rs  ane_roofline.rs  attention.rs  best_belief.rs  channel_simd.rs  coda.rs  committed_field_blend.rs  compression_drafter.rs  cross_resolution.rs  cumprodsum.rs  curator.rs  data_probe.rs  dendritic_gate.rs  depth_invariance.rs  dirichlet.rs  dllm_solver.rs  freeze.rs  funcattn.rs  gain_cost_halt.rs  group_invariance_probe.rs  hippocampal_cache.rs  irrep_pruner.rs  karc.rs  karc_dp.rs  latent_steering.rs  latent_trajectory_geometry.rs  leaky_core.rs  lib.rs  linking_fold.rs  linoss.rs  llmexec_guard.rs  manifold_bandit.rs  manifold_erasure.rs  mcts.rs  mcts_state_action_cache.rs  memory_soup_lora.rs  merkle.rs  mux_demux.rs  newton_schulz.rs  parallax_attn.rs  (+29 more)
crates/katgpt-core/tests/: analytic_lattice_alloc_check.rs  analytic_lattice_goat.rs  apollonian_basis_probe.rs  bench_331_babel_codec_goat.rs  bench_360_engram_staging_goat.rs  bench_406_renoise_ce_goat.rs  bench_412_subspace_steering_goat.rs  bench_416_region_subspace_goat.rs  causal_head_importance_g1.rs  conformal_alloc_check.rs  conformal_coverage.rs  conformal_floor_best_belief.rs  conformal_floor_bom.rs  conformal_floor_bom_trajectory.rs  conformal_floor_harness.rs  conformal_floor_sleep_time.rs  conformal_karc_no_regression.rs  conformal_reproducibility.rs  data_probe_sink_classify.rs  engram_integration_check.rs  funcattn_structured_basis_g1.rs  funcattn_structured_basis_k_sweep.rs  functional_substitution_g1.rs  functional_substitution_g2.rs  group_invariance_probe_g4.rs  heterogeneous_velocity_field_ensemble_alloc_check.rs  hippocampal_cache_retrieval.rs  karc_alloc_check.rs  karc_reproducibility.rs  linking_fold_alloc_check.rs  mag_g1.rs  mag_g2.rs  mag_g3.rs  mag_g4.rs  mag_g5.rs  mcts_state_action_cache_basic.rs  mcts_state_action_cache_eq1.rs  personality_composition_integration_check.rs  plan411_joint_classifier_gold_share.rs  plan414_hla_committed_belief_probe_goat.rs  (+9 more)
crates/katgpt-dec/: CHANGELOG.md  Cargo.toml  README.md
crates/katgpt-dec/benches/: bench_407_phase3_sheaf_admm.rs  bench_407_sheaf_admm_goat.rs  (+1 more)
crates/katgpt-deprecated/: Cargo.toml
crates/katgpt-forward/: Cargo.toml
crates/katgpt-hla/: CHANGELOG.md  Cargo.toml  README.md
crates/katgpt-kv/: Cargo.toml
crates/katgpt-micro-belief/: CHANGELOG.md  Cargo.toml  README.md
crates/katgpt-percepta/: Cargo.toml
crates/katgpt-personality/: CHANGELOG.md  Cargo.toml  README.md
crates/katgpt-proof-cert/: Cargo.toml
crates/katgpt-pruners/: Cargo.toml
crates/katgpt-quant/: Cargo.toml
crates/katgpt-ruliology/: Cargo.toml
crates/katgpt-sense/: CHANGELOG.md  Cargo.toml  README.md
crates/katgpt-sleep/: CHANGELOG.md  Cargo.toml  README.md
crates/katgpt-sparse/: Cargo.toml
crates/katgpt-spectral/: Cargo.toml
crates/katgpt-speculative/: Cargo.toml
crates/katgpt-tokenizer/: Cargo.toml
crates/katgpt-transformer/: Cargo.toml  README.md
crates/katgpt-types/: CHANGELOG.md  Cargo.toml  README.md
crates/katgpt-validator/: Cargo.toml
crates/microgpt-core/: Cargo.toml
(+3615 files in other folders)
