[package]
name = "microgpt-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
plotters = "0.3"
rayon = "1.10"
log = "0.4"
blake3 = "1"
fastrand = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "parsing"], optional = true }
proc-macro2 = { version = "1", optional = true }
bevy_ecs = { version = "0.15", optional = true }  # Standalone ECS (Plan 033)
wasmtime = { version = "28", optional = true }     # WASM bomber validator (Plan 034)
papaya = { version = "0.2", optional = true }      # Lock-free concurrent HashMap (Plan 037)
toml = "0.8"

[dev-dependencies]
ratatui = "0.29"
crossterm = "0.28"

[features]
default = []
sudoku = []
validator = ["syn", "proc-macro2"]
sparse_mlp = []  # TwELL-inspired sparse MLP matmul (Plan 022)
ppot = []  # PPoT logit-parameterized CPU resampling (Plan 026 + 027)
domain_latent = []  # Free Transformer mid-layer domain conditioning (Plan 038)
bandit = []  # Multi-armed bandit adaptive ScreeningPruner (Plan 030)
bomber = ["bevy_ecs", "bandit"]  # Bomberman HL Arena (Plan 033)
bomber-wasm = ["bomber", "wasmtime", "papaya"]  # WASM bomber validator loader (Plan 034) + batch pool (Plan 037)
monopoly = ["bevy_ecs", "bandit"]  # Monopoly Board Game Engine (Plan 034)
feedback = []  # E2E feedback loop — sends inference results to REST endpoint (Plan 042, requires consumer in riir-gpu)
rest = []  # REST bridge test + merge stub (Plan 009, client lives in riir-ai/riir-rest)
embedding_router = []  # Semantic embedding routing (Plan 024, not yet started)
game_domain = ["domain_latent"]  # Alias for domain_latent — game-specific Config presets (Plan 040)
language_domain = []  # Language domain: BPE vocab, LLM models (Plan 040, future)
gpu = []  # Placeholder — GPU training lives in riir-ai/riir-gpu
# LeviathanVerifier is always compiled (no gate needed) — verifier.rs, benchmark.rs
full = ["sudoku", "validator", "ppot", "domain_latent", "bandit", "bomber", "bomber-wasm", "monopoly", "feedback", "rest", "embedding_router", "gpu", "game_domain", "language_domain"]

# ── Bandit (RL / Game Theory) ─────────────────────────────────

[[example]]
name = "bandit_01_basic"
required-features = ["bandit"]

[[example]]
name = "bandit_02_ddtree"
required-features = ["bandit"]

[[example]]
name = "bandit_03_slot"
required-features = ["bandit"]

[[example]]
name = "bandit_04_combat"
required-features = ["bandit"]

[[example]]
name = "bandit_05_rps"
required-features = ["bandit"]

[[example]]
name = "bandit_06_resolver"
required-features = ["bandit"]

[[example]]
name = "bandit_07_director"
required-features = ["bandit"]

# ── Heuristic Learning ────────────────────────────────────────

[[example]]
name = "hl_01_trial_log"
required-features = ["bandit"]

[[example]]
name = "hl_02_hotswap"
required-features = ["bandit"]

# ── Inference-Time Review Metrics ─────────────────────────────

[[example]]
name = "review_01_metrics"
required-features = ["bandit"]

# ── Bomberman HL Arena ────────────────────────────────────────

[[example]]
name = "bomber_01_arena"
required-features = ["bomber"]

[[example]]
name = "bomber_02_tui"
required-features = ["bomber"]

[[example]]
name = "bomber_03_hl_proof"
required-features = ["bomber"]

[[example]]
name = "bomber_04_nn"
required-features = ["bomber-wasm"]

[[example]]
name = "bomber_05_replay_gen"
required-features = ["bomber"]

[[example]]
name = "bomber_06_replay_gen_v2"
required-features = ["bomber"]

# ── Monopoly FSM Arena ────────────────────────────────────────

[[example]]
name = "monopoly_01_arena"
required-features = ["monopoly"]

[[example]]
name = "monopoly_02_tui"
required-features = ["monopoly"]

[[example]]
name = "monopoly_03_hl_proof"
required-features = ["monopoly"]

[[example]]
name = "monopoly_04_bench"
required-features = ["monopoly"]

# ── FFT Tactics Arena ────────────────────────────────────────

[[example]]
name = "fft_01_arena"

# ── Blue Bear ──────────────────────────────────────────────────

[[example]]
name = "bear_01_demo"

[[example]]
name = "bear_02_tui"

# ── Core Features ──────────────────────────────────────────────

[[example]]
name = "core_01_validator"
required-features = ["validator"]

[[example]]
name = "core_02_raven"

[[example]]
name = "core_03_ppot"
required-features = ["ppot"]

[[example]]
name = "core_04_prefill"

# ── Dungeon ────────────────────────────────────────────────────

[[example]]
name = "dungeon_01_tui"

[[example]]
name = "dungeon_02_multifloor"

# ── Getting Started ────────────────────────────────────────────

[[example]]
name = "hello_py2rs"

# ── Sudoku ─────────────────────────────────────────────────────

[[example]]
name = "sudoku_01_9x9"
required-features = ["sudoku"]

[[example]]
name = "sudoku_02_speculative"
required-features = ["sudoku"]

[[example]]
name = "sudoku_03_tui"
required-features = ["sudoku"]

# ── Tactical AI ────────────────────────────────────────────────

[[example]]
name = "tactical_01_ai"

[[example]]
name = "tactical_02_terrain"

[[example]]
name = "tactical_03_procedural"

[[example]]
name = "tactical_04_parallel"

[[example]]
name = "tactical_05_bench"

[[example]]
name = "tactical_06_tui"
