[package]
name = "microgpt-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
plotters = "0.3"
rayon = "1.10"
log = "0.4"
blake3 = "1"
fastrand = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "parsing"], optional = true }
proc-macro2 = { version = "1", optional = true }
bevy_ecs = { version = "0.15", optional = true }  # Standalone ECS (Plan 033)
wasmtime = { version = "28", optional = true }     # WASM bomber validator (Plan 034)
papaya = { version = "0.2", optional = true }      # Lock-free concurrent HashMap (Plan 037)
ordered-float = { version = "4", optional = true } # Ord wrapper for f64 — CHT breakpoints (Plan 064 TG-A)
good_lp = { version = "1", optional = true, default-features = false, features = ["microlp"] } # MILP solver — scheduling (Plan 064 TG-D), pure Rust microlp backend
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true } # AutoGo REST API client (Plan 065)
toml = "0.8"

[dev-dependencies]
ratatui = "0.29"
crossterm = "0.28"

[features]
default = ["sparse_mlp", "domain_latent", "ppot", "bandit"]  # Production best perf + accuracy (Plan 051)
sp_kv = []  # SP-KV self-pruned key-value attention (Plan 070)
dllm = []  # D2F Discrete Diffusion Forcing — mini dLLM research (Plan 066)
sudoku = []
validator = ["syn", "proc-macro2"]
sparse_mlp = []  # TwELL-inspired sparse MLP matmul (Plan 022)
ppot = []  # PPoT logit-parameterized CPU resampling (Plan 026 + 027)
domain_latent = []  # Free Transformer mid-layer domain conditioning (Plan 038)
bandit = []  # Multi-armed bandit adaptive ScreeningPruner (Plan 030)
delta_mem = ["bandit"]  # δ-Mem modelless distillation — associative bandit memory (Plan 053)
g_zero = ["bandit"]  # G-Zero self-play distillation — Hint-δ gated absorb + bandit (Plan 049)
fft = ["bandit"]     # FFT Tactics Arena — ATB battle engine with status effects (Plan 053)
stepcode = ["bandit"]  # ⚠️ Plan 054 — NO GAIN proven. Infrastructure only. Off by default, not in `full`.
bomber = ["bevy_ecs", "bandit"]  # Bomberman HL Arena (Plan 033)
bomber-agent = ["bomber"]  # Coding agent validator loop (Issue 052, Tasks C9-C10)
bomber-wasm = ["bomber", "wasmtime", "papaya"]  # WASM bomber validator loader (Plan 034) + batch pool (Plan 037)
game_state = ["bomber"]  # GameState forward model trait + generic MCTS (Plan 056)
bandit_mcts = ["game_state"]  # Bandit-guided MCTS rollout policy — NFSP/MCTS duality (Plan 067)
hla_attention = []  # Higher-order Linear Attention — O(1) inference cache (Plan 057)
monopoly = ["bevy_ecs", "bandit"]  # Monopoly Board Game Engine (Plan 034)
go = ["bandit", "dep:reqwest"]  # AutoGo API bridge + Go GameState (Plan 065)
# ── Percepta (transformer-vm RIIR, Plan 064) ──────────────────
percepta = ["ordered-float"]  # CHT hull cache: upper+lower, HullMeta, tie-break, cumsum (TG-A)
percepta_gates = ["percepta"]  # + ReGLU, stepglu, multiply, persist primitives (TG-B)
percepta_graph = ["percepta_gates"]  # + Expression/Dimension DSL, ProgramGraph (TG-C)
percepta_wasm = ["percepta_graph"]  # + WASM decoder + lowering + interpreter — pure Rust, NOT wasmtime (TG-E+F)
percepta_compile = ["percepta_wasm", "good_lp"]  # + MILP + weights + transformer + Futamura + CLI (TG-D+G-J)
feedback = []  # E2E feedback loop — sends inference results to REST endpoint (Plan 042, requires consumer in riir-gpu)
rest = []  # REST bridge test + merge stub (Plan 009, client lives in riir-ai/riir-rest)
embedding_router = []  # Semantic embedding routing (Plan 024, not yet started)
game_domain = ["domain_latent"]  # Alias for domain_latent — game-specific Config presets (Plan 040)
language_domain = []  # Language domain: BPE vocab, LLM models (Plan 040, future)
gpu = []  # Placeholder — GPU training lives in riir-ai/riir-gpu
# LeviathanVerifier is always compiled (no gate needed) — verifier.rs, benchmark.rs
full = ["sudoku", "validator", "ppot", "domain_latent", "bandit", "delta_mem", "g_zero", "fft", "bomber", "bomber-agent", "bomber-wasm", "game_state", "bandit_mcts", "hla_attention", "monopoly", "go", "feedback", "rest", "embedding_router", "gpu", "game_domain", "language_domain", "percepta_compile", "dllm"]

# ── Bandit (RL / Game Theory) ─────────────────────────────────

[[example]]
name = "bandit_01_basic"
required-features = ["bandit"]

[[example]]
name = "bandit_02_ddtree"
required-features = ["bandit"]

[[example]]
name = "bandit_03_slot"
required-features = ["bandit"]

[[example]]
name = "bandit_04_combat"
required-features = ["bandit"]

[[example]]
name = "bandit_05_rps"
required-features = ["bandit"]

[[example]]
name = "bandit_06_resolver"
required-features = ["bandit"]

[[example]]
name = "bandit_07_director"
required-features = ["bandit"]

# ── Heuristic Learning ────────────────────────────────────────

[[example]]
name = "hl_01_trial_log"
required-features = ["bandit"]

[[example]]
name = "hl_02_hotswap"
required-features = ["bandit"]

# ── Inference-Time Review Metrics ─────────────────────────────

[[example]]
name = "review_01_metrics"
required-features = ["bandit"]

# ── Stepwise Reward Shaping (StepCodeReasoner Plan 054) ──────

[[example]]
name = "stepcode_01_shaped_bandit"
required-features = ["stepcode"]

# ── Bomberman HL Arena ────────────────────────────────────────

[[example]]
name = "bomber_01_arena"
required-features = ["bomber"]

[[example]]
name = "bomber_02_tui"
required-features = ["bomber"]

[[example]]
name = "bomber_03_hl_proof"
required-features = ["bomber"]

[[example]]
name = "bomber_04_nn"
required-features = ["bomber-wasm"]

[[example]]
name = "bomber_05_replay_gen"
required-features = ["bomber"]

[[example]]
name = "bomber_06_replay_gen_v2"
required-features = ["bomber"]

[[example]]
name = "bomber_07_bomb_types"
required-features = ["bomber"]

[[example]]
name = "bomber_08_agent_loop"
required-features = ["bomber-agent"]

# ── Monopoly FSM Arena ────────────────────────────────────────

[[example]]
name = "monopoly_01_arena"
required-features = ["monopoly"]

[[example]]
name = "monopoly_02_tui"
required-features = ["monopoly"]

[[example]]
name = "monopoly_03_hl_proof"
required-features = ["monopoly"]

[[example]]
name = "monopoly_04_bench"
required-features = ["monopoly"]

# ── GameState Forward Model (Plan 056) ────────────────────────

[[example]]
name = "game_state_01_bomber_mcts"
required-features = ["game_state"]

[[example]]
name = "game_state_02_bomber_gvg"
required-features = ["game_state"]

# ── FFT Tactics Arena ────────────────────────────────────────

[[example]]
name = "fft_01_arena"

# ── Blue Bear ──────────────────────────────────────────────────

[[example]]
name = "bear_01_demo"

[[example]]
name = "bear_02_tui"

# ── Core Features ──────────────────────────────────────────────

[[example]]
name = "core_01_validator"
required-features = ["validator"]

[[example]]
name = "core_02_raven"

[[example]]
name = "core_03_ppot"
required-features = ["ppot"]

[[example]]
name = "core_04_prefill"

# ── Dungeon ────────────────────────────────────────────────────

[[example]]
name = "dungeon_01_tui"

[[example]]
name = "dungeon_02_multifloor"

# ── Getting Started ────────────────────────────────────────────

[[example]]
name = "hello_py2rs"

# ── Sudoku ─────────────────────────────────────────────────────

[[example]]
name = "sudoku_01_9x9"
required-features = ["sudoku"]

[[example]]
name = "sudoku_02_speculative"
required-features = ["sudoku"]

[[example]]
name = "sudoku_03_tui"
required-features = ["sudoku"]

# ── Go (AutoGo API Bridge) ────────────────────────────────────

[[example]]
name = "go_00_api_bridge"
required-features = ["go"]

[[example]]
name = "go_01_mcts"
required-features = ["go"]

[[example]]
name = "go_02_tournament"
required-features = ["go"]

[[example]]
name = "go_03_head_to_head"
required-features = ["go"]

# ── Tactical AI ────────────────────────────────────────────────

[[example]]
name = "tactical_01_ai"

[[example]]
name = "tactical_02_terrain"

[[example]]
name = "tactical_03_procedural"

[[example]]
name = "tactical_04_parallel"

[[example]]
name = "tactical_05_bench"

[[example]]
name = "tactical_06_tui"
