[package]
name = "katgpt-attn"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Attention stack primitives — GDN2 kernels, DashAttention, Chiaroscuro, RAT+ Bridge, EGA, StaticCal, DiagonalGate, FuncAttn composition. Extracted from katgpt-rs/src/ (Proposal 003 Phase 2)."
repository = "https://github.com/katopz/katgpt-rs"
publish = false

[dependencies]
katgpt-core = { path = "../katgpt-core" }
# katgpt-forward + katgpt-transformer (Issue 007 Phase F.4a, 2026-07-02):
# the gdn2/forward.rs + dash_attn/forward.rs composition layers moved here
# from root. Activated by `gdn2_attention` / `dash_attn` features respectively
# (the forward modules live inside those feature-gated parent modules).
katgpt-forward = { path = "../katgpt-forward", default-features = false, optional = true }
katgpt-transformer = { path = "../katgpt-transformer", optional = true }
# katgpt-spectral: needed by funcattn_compose/spectral_pre_rotate (calibrate_eigenbasis).
# Optional — only pulled when the funcattn_spectral_pre_rotate feature is on.
katgpt-spectral = { path = "../katgpt-spectral", optional = true }
# rustfft: DCT spectral entropy operator for Chiaroscuro attention.
rustfft = { version = "6.2", optional = true }
# blake3: commitment hashing for FuncAttn freeze/thaw snapshots + StaticCal tables.
blake3 = { version = "1.8", optional = true }
# serde: (De)serialization for FuncAttn freeze/thaw snapshots.
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
fastrand = "2"
serde_json = "1"

[features]
default = []
# GDN2 recurrent attention kernels (types + kernel) AND the composition layer
# (forward_gdn2, Issue 007 Phase F.4a). The forward module moved here from root;
# pulls katgpt-forward (ForwardContext) + katgpt-transformer (TransformerWeights).
gdn2_attention = ["dep:blake3", "dep:katgpt-forward", "dep:katgpt-transformer"]
# Wall Attention diagonal gate — shared DiagonalGate trait used by both GDN2
# and Wall attention. Gated alongside gdn2_attention / wall_attention in root.
diagonal_gate = []
# DashAttention clean core (entmax, routing, chunk_summary) AND the composition
# layer (forward_dash_attn_prefill / forward_dash_attn_decode, Issue 007 Phase
# F.4a). The forward module moved here from root; pulls katgpt-forward
# (ForwardContext) + katgpt-transformer (TransformerWeights/MultiLayerKVCache).
# NOTE: forward_dash_attn_decode_vortex was STRIPPED — see
# dash_attn/forward.rs module comment. The VortexFlow cluster (vortex_flow,
# block_topk, channel_aware, entmax_router, meta_router, value_energy) stays in
# root because meta_router depends on pruners::bandit + speculative::types.
dash_attn = ["dep:katgpt-forward", "dep:katgpt-transformer"]
# Chiaroscuro attention — per-token DCT spectral entropy operator routing.
chiaroscuro = ["dep:rustfft"]
# RAT+ Recurrence Bridge — modelless dilated inference via GDN2 state.
rat_plus_bridge = []
# Energy-Gated Attention — spectral salience gating.
ega_attn = []
# Static Calibration Tables — pre-computed per-head attention scales.
static_cal_tables = ["dep:blake3"]
# FuncAttn composition layer (Plan 286 Phase 5).
funcattn_freeze_thaw = ["dep:blake3", "dep:serde"]
funcattn_spectral_pre_rotate = ["dep:katgpt-spectral"]
funcattn_chiar_blend = ["chiaroscuro"]
# sparse_mlp: gates the `#[cfg(feature = "sparse_mlp")]` MLP path in
# gdn2/forward.rs. Forwards to katgpt-core (for sparse_matmul) and
# katgpt-forward (for ForwardContext.active_indices/active_values).
sparse_mlp = ["katgpt-core/sparse_mlp", "katgpt-forward/sparse_mlp"]
